# InventorySystem

./: README.md
CodeSources/Assets/libs/inventory/: PlayerItems.xml  settings.xml
CodeSources/Assets/libs/ui/: UI_Inventory.swf
CodeSources/Assets/libs/ui/UIElements/: Inventory.xml
CodeSources/Code/: CMakeLists.txt  CryNodes.cpp  EntityMgr.cpp  EntityMgr.h  ISimpleExtension.h  ISystemCore.h  InventoryMgr.cpp  InventoryMgr.h  Plugin.cpp  Plugin.h  UIMgr.cpp  UIMgr.h
FlashSources/: UI_Inventory.fla
